--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
             </div>
         </div>
 
-        <div class="cursor" id="cursor" style="left: 1113px; top: 436px;"></div>
-        <div class="cursor2" id="cursor2" style="left: 1113px; top: 436px;"></div>
-        <div class="cursor3" id="cursor3" style="left: 1113px; top: 436px;"></div>
+        <div class="cursor" id="cursor"></div>
+        <div class="cursor2" id="cursor2"></div>
+        <div class="cursor3" id="cursor3"></div>
 
         <div class="vs-scroll-view" style="height: 888px;"></div>
 
