--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
                 <span class="text" id="menu_name">Menu</span>
             </div>
         </div>
-        <!-- <div class="menu-overlay" id="menu-overlay"></div> -->
+        <div class="menu-overlay" id="menu-overlay"></div>
         <div id="menu" class="menu">
             <div class="section_fixed" id="menu-inner">
                 <div class="section__clip" id="menuClip">
@@ -229,8 +229,8 @@
                     </section>
                 </div>
             </div>
-        </div>
-    
+    </div>
+
     <div id="menu-content">            
         <video autoplay muted loop id="myVideo">
                 <source src="./assets/vidoe/DNAIntroBW.mp4" type="video/mp4">
@@ -271,7 +271,7 @@
             </div>
         </div>
 
-</div>
+    </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="./assets/js/app.js"></script>
         <script src="./assets/js/analytics.js"></script>
